package com.anushibinj.veemailer.model;

public enum ActionType {
    SUBSCRIBE,
    UPDATE,
    UNSUBSCRIBE,
    SIGNUP_VERIFICATION,
    PASSWORD_RESET,
    INVITE
}
