package com.anushibinj.veemailer.model;

public enum Frequency {
    HOURLY,
    DAILY,
    WEEKLY
}
