package com.anushibinj.veemailer.model;

public enum JobTriggerType {
    SCHEDULED,
    MANUAL
}
