package com.anushibinj.veemailer.model;

public enum Status {
    PENDING,
    ACTIVE,
    DISABLED
}
