package com.anushibinj.veemailer.model;

public enum TriageSlaThreshold {
    GREEN,
    YELLOW,
    RED
}
