package com.anushibinj.veemailer.model;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.util.UUID;
import java.time.Instant;

@Entity
@Table(name = "workspaces")
@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
@JsonIgnoreProperties({"hibernateLazyInitializer", "handler"})
public class Workspace {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private UUID id;

    private String title;
    private String workspaceShortcode;
    private String sharedSpaceId;
    private String workspaceId;

    private String clientId;
    private String clientKey;
    private String rootUrl;

    @Enumerated(EnumType.STRING)
    @Builder.Default
    private WorkspaceStatus status = WorkspaceStatus.DRAFT;

    @Enumerated(EnumType.STRING)
    @Builder.Default
    private WorkspaceConnectivityStatus connectivityStatus = WorkspaceConnectivityStatus.UNKNOWN;

    private Instant connectivityCheckedAt;
    private String connectivityMessage;

    /** Audit fields — when/who created this workspace. Null for legacy rows predating this tracking. */
    private Instant createdAt;
    private String createdBy;
}
